--- a/probability.html
+++ b/probability.html
@@ -113,7 +113,7 @@
 </li>
 </ul>
 </li>
-<li class="fragment roll-in"><b>Conditional Probability Dsitribution</b>
+<li class="fragment roll-in"><b>Conditional Probability Distribution</b>
 <ul class="org-ul">
 <li>\(p(x|y)\)
 </li>
