kaggle just approved

--- a/cifar-10.html
+++ b/cifar-10.html
@@ -221,7 +221,7 @@ Variables in the current scope:
 
 <h3>Kaggle (Demo: kNN Baseline)</h3>
 <ul class="org-ul">
-<li class="fragment roll-in"><a href="https://inclass.kaggle.com/c/tiny-images-classification">Our Competition Home on Kaggle (not open yet)</a>
+<li class="fragment roll-in"><a href="https://inclass.kaggle.com/c/tiny-images-classification">Our Competition Home on Kaggle</a>
 </li>
 <li class="fragment roll-in">[Important] Sign up with you <b>@hku.hk</b> email, or you won't get entry to it.
 </li>
