--- a/probability.html
+++ b/probability.html
@@ -6,8 +6,8 @@
 <title>Machine Learning Tutorial (I) Probability Review</title>
 <meta name="author" content="((Ray) Shirui Lu)"/>
 
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/2.5.0/css/reveal.min.css"/>
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/2.5.0/css/theme/beige.css" id="theme"/>
+<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/css/reveal.min.css"/>
+<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/css/theme/beige.css" id="theme"/>
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
@@ -15,7 +15,7 @@
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = 'http://cdn.jsdelivr.net/reveal.js/2.5.0/css/print/pdf.css';
+        link.href = 'http://cdn.jsdelivr.net/reveal.js/3.0.0/css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
@@ -136,7 +136,7 @@
 <section>
 <section id="sec-2-4" >
 
-<h3>Exercises on <b>Joint Probability Distribution</b> and <b>Conditional Probability</b></h3>
+<h3>Exercises on <b>Joint Probability Distribution</b></h3>
 <img src="./images/marble_result.png" alt="marble_result.png" />
 <ul class="org-ul">
 <li class="fragment roll-in"><b>Joint Probability Distribution</b>
@@ -151,6 +151,15 @@
 </li>
 </ul>
 </li>
+</ul>
+</section>
+</section>
+<section>
+<section id="sec-2-5" >
+
+<h3>Exercises on <b>Conditional Probability</b></h3>
+<img src="./images/marble_result.png" alt="marble_result.png" />
+<ul class="org-ul">
 <li class="fragment roll-in"><b>Conditional Probability Distribution</b>
 <ul class="org-ul">
 <li>\(p(x_2=R | x_1=R) = (3/28)/((3/28)+(15/56)) = (2/7)\)
@@ -163,7 +172,7 @@
 </section>
 </section>
 <section>
-<section id="sec-2-5" >
+<section id="sec-2-6" >
 
 <h3><b>Sum Rule (Marginalization)</b> and <b>Chain Rule</b></h3>
 <ul class="org-ul">
@@ -178,7 +187,7 @@
 
 </section>
 <section>
-<section id="sec-2-6" >
+<section id="sec-2-7" >
 
 <h3>Bayes' Rule</h3>
 <img src="./images/bayes_rule.png" alt="bayes_rule.png" />
@@ -193,7 +202,7 @@
 
 </section>
 <section>
-<section id="sec-2-7" >
+<section id="sec-2-8" >
 
 <h3>Exercises on Bayes' Rule</h3>
 <img src="./images/exercises_bayes.png" alt="exercises_bayes.png" />
@@ -201,7 +210,7 @@
 
 </section>
 <section>
-<section id="sec-2-8" >
+<section id="sec-2-9" >
 
 <h3><b>Independence</b> and <b>Conditional Independence</b></h3>
 <img src="./images/independence.png" alt="independence.png" />
@@ -209,7 +218,7 @@
 
 </section>
 <section>
-<section id="sec-2-9" >
+<section id="sec-2-10" >
 
 <h3>Exercises on <b>Independence</b></h3>
 <img src="./images/exercises_independence.png" alt="exercises_independence.png" />
@@ -217,7 +226,7 @@
 
 </section>
 <section>
-<section id="sec-2-10" >
+<section id="sec-2-11" >
 
 <h3>Continuous Case</h3>
 <img src="./images/continuous.png" alt="continuous.png" />
@@ -225,7 +234,7 @@
 
 </section>
 <section>
-<section id="sec-2-11" >
+<section id="sec-2-12" >
 
 <h3>Continuous Case</h3>
 <img src="./images/continuous_2.png" alt="continuous_2.png" />
@@ -233,7 +242,7 @@
 
 </section>
 <section>
-<section id="sec-2-12" >
+<section id="sec-2-13" >
 
 <h3><b>Mean</b> and <b>Variance</b></h3>
 <ul class="org-ul">
@@ -252,7 +261,7 @@
 
 </section>
 <section>
-<section id="sec-2-13" >
+<section id="sec-2-14" >
 
 <h3>Exercises on <b>Mean</b> and <b>Variance</b></h3>
 <img src="./images/bernoulli.png" alt="bernoulli.png" />
@@ -260,7 +269,7 @@
 
 </section>
 <section>
-<section id="sec-2-14" >
+<section id="sec-2-15" >
 
 <h3>Gaussian Distribution</h3>
 <img src="./images/gaussian.png" alt="gaussian.png" />
@@ -268,7 +277,7 @@
 
 </section>
 <section>
-<section id="sec-2-15" >
+<section id="sec-2-16" >
 
 <h3>Gaussian Distribution</h3>
 <img src="./images/gaussian_2.png" alt="gaussian_2.png" />
@@ -276,7 +285,7 @@
 
 </section>
 <section>
-<section id="sec-2-16" >
+<section id="sec-2-17" >
 
 <h3>Maxium Likelihood Estimation</h3>
 <ul class="org-ul">
@@ -287,7 +296,7 @@
 
 </section>
 <section>
-<section id="sec-2-17" >
+<section id="sec-2-18" >
 
 <h3>Maxium Likelihood Estimation for a 1D Gaussian</h3>
 <img src="./images/mle.png" alt="mle.png" />
@@ -295,7 +304,7 @@
 
 </section>
 <section>
-<section id="sec-2-18" >
+<section id="sec-2-19" >
 
 <h3>Maxium Likelihood Estimation for a 1D Gaussian</h3>
 <img src="./images/mle_2.png" alt="mle_2.png" />
@@ -303,7 +312,7 @@
 
 </section>
 <section>
-<section id="sec-2-19" >
+<section id="sec-2-20" >
 
 <h3>Acknowledgement</h3>
 <ul class="org-ul">
@@ -315,8 +324,8 @@
 </div>
 </div>
 
-<script src="http://cdn.jsdelivr.net/reveal.js/2.5.0/lib/js/head.min.js"></script>
-<script src="http://cdn.jsdelivr.net/reveal.js/2.5.0/js/reveal.min.js"></script>
+<script src="http://cdn.jsdelivr.net/reveal.js/3.0.0/lib/js/head.min.js"></script>
+<script src="http://cdn.jsdelivr.net/reveal.js/3.0.0/js/reveal.min.js"></script>
 
 <script>
 // Full list of configuration options available here:
@@ -343,9 +352,9 @@ transitionSpeed: 'default',
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: 'http://cdn.jsdelivr.net/reveal.js/2.5.0/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/2.5.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/2.5.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } }
+ { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+ { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } }
 ]
 });
 </script>
